<resources>
    <string name="app_name">Studio Web</string>
    <string name="version">v2.0</string>
    <string name="cpf_ou_cnpj">CPF</string>
    <string name="digite_nome">Digite seu Nome</string>
    <string name="digite_cpf">Digite seu CPF</string>
    <string name="digite_senha">Digite sua Senha</string>
    <string name="digite_nova_senha">Digite sua nova senha</string>
    <string name="confirme_senha">Confirme sua Senha</string>
    <string name="digite_email">Digite seu E-mail</string>
    <string name="digite_telefone">Digite seu Telefone</string>
    <string name="digite_nascimento">Digite seu Nascimento</string>
    <string name="senha">Senha</string>
    <string name="sem_conta">Ainda não tem uma conta?</string>
    <string name="registrar">Clique aqui e faça uma!</string>
    <string name="registro_conta">Registro de contas</string>
    <string name="edicao_conta">Edição de contas</string>
    <string name="caracter_senha">Sua senha deve conter no mínimo 6 caracteres</string>
    <string name="user">Usuário,</string>
    <string name="user_nome">Nikolas Ferreira Silva</string>

    <string name="view_profile">Visualizar Perfil</string>
    <string name="welcome_again">Olá! Bem-vindo(a),</string>
    <string name="portfolio">Portfólio</string>

    <string name="orcamento">Faça seu Orçamento!</string>
    <string name="digite_ramo">Ramo do seu Negócio</string>
    <string name="digite_nomeEmpresa">Nome da sua Empresa</string>
    <string name="templates_preferidos">Templates Preferidos:</string>
    <string name="enviar">enviar</string>

    <string name="offline">Você está Offline! Fique online para sincronizar seus dados!</string>

    <string name="alterar_dados">Alterar Dados</string>
    <string name="logout">Sair</string>

    <string name="email_completo">nikolas.ferreira99@gmail.com</string>
    <string name="telefone_completo">(51) 9 9150-8987</string>
    <string name="nascimento_completo">29/06/2000</string>
    <string name="cpf_completo">868.465.150-20</string>

    <string name="email">E-Mail</string>
    <string name="telefone">Telefone</string>
    <string name="nascimento">Nascimento</string>
    <string name="cpf">CPF</string>

    <string name="template_vegas">Las Vegas</string>
    <string name="template_paris">Paris</string>
    <string name="template_madrid">Madrid</string>
    <string name="template_losangeles">Los Angeles</string>
    <string name="template_veneza">Veneza</string>
    <string name="template_london">London</string>

    <string name="versao_app">Versão do Aplicativo</string>

    <string name="btn_acessar">Acessar</string>
    <string name="btn_registrar">Registrar</string>
    <string name="title_activity_orcamento">OrcamentoActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Início</string>
    <string name="menu_realizar_orcamento">Realizar Orçamento</string>
    <string name="menu_meus_orcamentos">Meus Orçamentos</string>
    <string name="menu_todos_usuarios">Todos Usuários (Para Admins)</string>
    <string name="orcamento_para">Orçamento para: </string>
    <string name="empresa">Empresa</string>
    <string name="sem_orcamentos">Você não possui orçamentos!\nRealize um agora mesmo!</string>
    <string name="status">status</string>
    <string name="editar">editar</string>
    <string name="orcamento_finalizado">Orçamento Finalizado!</string>
    <string name="orcamento_pendente">Orçamento Pendente</string>
</resources>