<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_orcamentoPara"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/orcamento_para"
        />
    <TextView
        android:id="@+id/tv_nomeOrcamento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        app:layout_constraintLeft_toRightOf="@id/tv_orcamentoPara"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/user_nome"
        />

    <TextView
        android:id="@+id/tv_paraEmpresa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_orcamentoPara"
        android:text="@string/empresa"
        />
    <TextView
        android:id="@+id/tv_empresaOrcamento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        app:layout_constraintLeft_toRightOf="@id/tv_paraEmpresa"
        app:layout_constraintTop_toBottomOf="@id/tv_nomeOrcamento"
        android:text="@string/empresa"
        />

    <TextView
        android:id="@+id/tv_templatesFavs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_paraEmpresa"
        android:text="@string/templates_preferidos"
        />
    <TextView
        android:id="@+id/tv_templatesOrcamento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        app:layout_constraintLeft_toRightOf="@id/tv_templatesFavs"
        app:layout_constraintTop_toBottomOf="@id/tv_empresaOrcamento"
        android:text="@string/templates_preferidos"
        />

</androidx.constraintlayout.widget.ConstraintLayout>