<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/img_finalizado"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:src="@drawable/ic_success"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/rightColor" />

    <TextView
        android:id="@+id/tv_finalizado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/orcamento_finalizado"
        android:textColor="@color/white"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="@id/img_finalizado"
        app:layout_constraintRight_toLeftOf="@id/img_finalizado"
        app:layout_constraintTop_toTopOf="@id/img_finalizado" />

    <ImageView
        android:id="@+id/img_pendente"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:src="@drawable/ic_pendente"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/pendenteColor" />

    <TextView
        android:id="@+id/tv_pendente"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/orcamento_pendente"
        android:textColor="@color/white"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="@id/img_pendente"
        app:layout_constraintRight_toLeftOf="@id/img_pendente"
        app:layout_constraintTop_toTopOf="@id/img_pendente" />

    <TextView
        android:id="@+id/tv_orcamentoPara"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/orcamento_para"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_nomeOrcamento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/user_nome"
        android:textColor="@color/white"
        app:layout_constraintLeft_toRightOf="@id/tv_orcamentoPara"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_paraEmpresa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-light"
        android:text="Empresa:"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_orcamentoPara" />

    <TextView
        android:id="@+id/tv_empresaOrcamento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/empresa"
        android:textColor="@color/white"
        app:layout_constraintLeft_toRightOf="@id/tv_paraEmpresa"
        app:layout_constraintTop_toBottomOf="@id/tv_nomeOrcamento" />

    <TextView
        android:id="@+id/tv_templatesFavs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/templates_preferidos"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_paraEmpresa" />

    <TextView
        android:id="@+id/tv_templatesOrcamento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/templates_preferidos"
        android:textColor="@color/white"
        app:layout_constraintLeft_toRightOf="@id/tv_templatesFavs"
        app:layout_constraintTop_toBottomOf="@id/tv_empresaOrcamento" />

    <Button
        android:id="@+id/btn_status"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="58dp"
        android:background="@drawable/button_editar"
        android:text="@string/status"
        android:textSize="12sp"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn_editarOrcamento"
        app:layout_constraintTop_toBottomOf="@id/tv_templatesOrcamento" />

    <Button
        android:id="@+id/btn_editarOrcamento"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/button_editar"
        android:text="@string/editar"
        android:textSize="12sp"
        app:layout_constraintLeft_toRightOf="@id/btn_status"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_templatesOrcamento" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_status" />

</androidx.constraintlayout.widget.ConstraintLayout>